HSEARCH-3219 Wildfly no longer requiring --add-opens parameters